--- a/requirements.txt
+++ b/requirements.txt
@@ -55,6 +55,5 @@ wcwidth==0.2.13
 Werkzeug==3.1.3
 WTForms==3.2.1
 gunicorn==23.0.0
-psycopg2==2.9.10
 twilio==9.6.1
-gunicorn==23.0.0
+psycopg2-binary==2.9.10
